--- a/161028/css/kcc_style.css
+++ b/161028/css/kcc_style.css
@@ -403,5 +403,18 @@ address{background-color:#444;line-height:30px;text-align:center;color:#fff}
 .view_tr{height: 76px;}
 #view{border-top: 3px solid #115fad;margin-top: 30px;width:100%}
 
+.view_wrap{margin-top:29px}
+.view_tit{overflow:hidden;padding:13px 22px 14px 12px;border-top:3px solid #115fad;border-bottom:1px solid #ddd;background:#f2f8ff;font-size:13px;color:#333}
+.vt_left{float:left}
+.vt_right{display:inline;float:right}
+.vt_right strong .num{display:inline-block;margin-left:5px;font-weight:700}
+.view_cont{padding:30px 12px;font-size:13px;line-height:20px;color:#333}
+.view_cont img{margin-top:20px}
+.view_txt{margin-top:20px}
+.view_txt:first-child{margin-top:0}
+
+.btn_area{padding-top:20px;border-top:3px solid #ccc;text-align:right;}
+.btn_area .btn_view{width:54px;height:24px;background-position:0 -171px;font-size:13px;color:#333;line-height:34px; float: right; text-align:center; margin: 5px; background: #ddd;}
+.btn_area .btn_view:hover{text-decoration:none}
 
 .textaaa { width: 500px; height: 400px; }
