--- a/bus/css/gongan.css
+++ b/bus/css/gongan.css
@@ -7,22 +7,31 @@
     height: 20px;
     position: relative;
     margin-top: 10px;
+
+
 }
 #bus_num{
+    
     font-size: 15px;
     height: 25px;
     width: 360px;
+ 
+   
+    
 }
 form{
     height: 25px;
+
 }
 #warp{
     width: 89%;
     height:800px;
-    border: 3px solid black;
+    border: 3px double black;
      border-radius: 20px;
    margin: 0 auto;
   background:  #E3F6CE;
+    
+    
 }
 #header{
     width: 100%;
@@ -67,15 +76,17 @@ form{
 	background: white;
 	border: 3px solid grey;
     height: 580px;
+	
 }
 #bus{
     width: 75%;
+
     height: 600px;
     background: #82FA58;
      float: left;
 }
 #bus_map{
-	width:50%;
+	width:60%;
 	  height: 580px;
 	float: left;
 	margin-left: 10px; 
@@ -85,7 +96,7 @@ form{
 }
 
 #bus_show{
-	width: 40%;
+	width: 30%;
 
 	overflow: scroll;
 	margin-left: 30px;
